WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120788
[Qt][BlackBerry] Text track localized string functions are named wrong
https://bugs.webkit.org/show_bug.cgi?id=120788
Summary
[Qt][BlackBerry] Text track localized string functions are named wrong
Brendan Long
Reported
2013-09-05 12:43:11 PDT
[Qt][BlackBerry] Text track localized string functions are named wrong
Attachments
Patch
(2.17 KB, patch)
2013-09-05 12:44 PDT
,
Brendan Long
no flags
Details
Formatted Diff
Diff
Fix ChangeLog
(2.16 KB, patch)
2013-09-06 08:54 PDT
,
Brendan Long
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brendan Long
Comment 1
2013-09-05 12:44:51 PDT
Created
attachment 210648
[details]
Patch This fixes the QtWebKitBuild with --video-track. I noticed BlackBerry had the same problem, so I fixed it there too. I'm going to look into building with --video-track by default and disabling it at runtime, since this comes up a lot. This specific case appears to have been caused by
r155048
.
Philippe Normand
Comment 2
2013-09-05 22:21:28 PDT
Comment on
attachment 210648
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210648&action=review
> Source/WebCore/ChangeLog:8 > + No new tests (OOPS!).
cq won't like this, please remove it. Also if no details are given about the specific changes please remove the lines below.
Brendan Long
Comment 3
2013-09-06 08:54:51 PDT
Created
attachment 210760
[details]
Fix ChangeLog
WebKit Commit Bot
Comment 4
2013-09-06 09:11:33 PDT
Comment on
attachment 210760
[details]
Fix ChangeLog Clearing flags on attachment: 210760 Committed
r155190
: <
http://trac.webkit.org/changeset/155190
>
WebKit Commit Bot
Comment 5
2013-09-06 09:11:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug