[Qt][BlackBerry] Text track localized string functions are named wrong https://bugs.webkit.org/show_bug.cgi?id=120788

Patch by Brendan Long <b.long@cablelabs.com> on 2013-09-06
Reviewed by Philippe Normand.

This renames textTrackOffText() to textTrackOffMenuItemText(), and
adds textTrackAutomaticMenuItemText(), to make them match the
definitions in LocalizedStrings.h.

* platform/blackberry/LocalizedStringsBlackBerry.cpp:
* platform/qt/LocalizedStringsQt.cpp:

Canonical link: https://commits.webkit.org/138799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155190 268f45cc-cd09-0410-ab3c-d52691b4dbfc