Source/WebCore/platform/blackberry/LocalizedStringsBlackBerry.cpp
@@ -393,7 +393,13 @@ String textTrackSubtitlesText()
     return String();
 }
 
-String textTrackOffText()
+String textTrackOffMenuItemText()
+{
+    notImplemented();
+    return String();
+}
+
+String textTrackAutomaticMenuItemText()
 {
     notImplemented();
     return String();
